--- a/extensions/testtemplated/blocks/app-block.liquid
+++ b/extensions/testtemplated/blocks/app-block.liquid
@@ -24,7 +24,7 @@
     const shopDomain = "{{ shop.permanent_domain }}";
     
     // Aapki Render Application URL
-    const appBaseUrl = "https://shopify-rewards-app.onrender.com"; 
+    const appBaseUrl = "https://testtemplates.onrender.com"; 
     
     // Link format: External API call
     const url = `${appBaseUrl}/api/referral?ref=${hex}&se=${btoa(senderEmail)}&shop=${shopDomain}`;
