--- a/extensions/testtemplated/blocks/digital_hub.liquid
+++ b/extensions/testtemplated/blocks/digital_hub.liquid
@@ -130,7 +130,7 @@ let allAssets = [];
 let filteredAssets = [];
 let currentPage = 1;
 const perPage = 10;
-const userEmail = "test@gmail.com";
+const userEmail = "test1234@gmail.com";
  
 async function fetchAssets() {
     try {
